Done modals, start adaptive marks and models

--- a/src/blocks/components/article-detail/article-detail.pug
+++ b/src/blocks/components/article-detail/article-detail.pug
@@ -100,7 +100,7 @@ section.article-detail
                 .article-bottom__item
                     a(href="javascript:void(0)").add-to-favorite.js-add-to-favorite Добавить в избранное
                 .article-bottom__item
-                    a(href="javascript:void(0)").remind-me.js-remind-me Напомнить мне
+                    a(href="javascript:void(0)", data-modal-type="remind-me").remind-me.js-modal-open Напомнить мне
                 .article-bottom__item
                     include ../../components/share-list/share-list
 section.pay-attension
