--- a/src/blocks/components/personal-auto/personal-auto.pug
+++ b/src/blocks/components/personal-auto/personal-auto.pug
@@ -1,5 +1,5 @@
 mixin personal-auto(value, hasTitle=false)
-    .personal-auto
+    .personal-auto(data-modal-type="select-car").js-modal-open
         if (hasTitle)
             p Ваш автомобиль:
         a(href="#")
