--- a/src/blocks/modules/marks-and-models/marks-and-models.pug
+++ b/src/blocks/modules/marks-and-models/marks-and-models.pug
@@ -1,4 +1,4 @@
-section
+section.marks-and-models__section
     .alphabet
         .alphabet-list
             a.active(href="#")='A'
@@ -27,7 +27,7 @@ section
             a(href="#")='X'
             a(href="#")='Y'
             a(href="#")='Z'
-        a(href="#").alphabet-edit А - Я
+        a(href="#").alphabet-edit А-Я
     .marks-and-models
         .letter A
         .marks
