--- a/src/pages/home-not-auth.pug
+++ b/src/pages/home-not-auth.pug
@@ -1,7 +1,7 @@
 extends ../views/layouts/default
 block variables
-	- var title = "Главная";
-	- var isAuth = true;
+	- var title = "Главная - не авторизованного пользователя";
+	- var isAuth = false;
 
 block content
 	include ../blocks/components/card/card
