--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,6 +11,8 @@ block content
 				li
 					a(href="home.html") Главная
 				li
+					a(href="home-not-auth.html") Главная - для не авторизованного
+				li
 					a(href="car-repair.html") Ремонт автомобиля
 				li
 					a(href="article-detail.html") Детальная статьи
