--- a/src/blocks/components/menu/_menu.scss
+++ b/src/blocks/components/menu/_menu.scss
@@ -3,7 +3,13 @@
   justify-content: space-between;
   align-items: center;
 
-  &-item {
+  &__img {
+    @include lg-block {
+      width: 35px;
+    }
+  }
+
+  &__item {
     display: flex;
     justify-content: flex-start;
     align-items: center;
