--- a/src/blocks/components/menu/menu.pug
+++ b/src/blocks/components/menu/menu.pug
@@ -1,16 +1,21 @@
 nav.menu
-    a(href="#").menu-item
-        img(src="img/sprites/intermediate-svg/icon-engine.svg", alt="")
+    a(href="#").menu__item
+        .menu__img
+            img(src="img/sprites/intermediate-svg/icon-engine.svg", alt="")
         span  Двигатель
-    a(href="#").menu-item
-        img(src="img/sprites/intermediate-svg/icon-transmission.svg", alt="")
+    a(href="#").menu__item
+        .menu__img
+            img(src="img/sprites/intermediate-svg/icon-transmission.svg", alt="")
         span  Трансмиссия
-    a(href="#").menu-item
-        img(src="img/sprites/intermediate-svg/icon-car-body.svg", alt="")
+    a(href="#").menu__item
+        .menu__img
+            img(src="img/sprites/intermediate-svg/icon-car-body.svg", alt="")
         span  Кузов
-    a(href="#").menu-item
-        img(src="img/sprites/intermediate-svg/icon-electric.svg", alt="")
+    a(href="#").menu__item
+        .menu__img
+            img(src="img/sprites/intermediate-svg/icon-electric.svg", alt="")
         span  Электрика
-    a(href="#").menu-item
-        img(src="img/sprites/intermediate-svg/icon-running-system.svg", alt="")
+    a(href="#").menu__item
+        .menu__img
+            img(src="img/sprites/intermediate-svg/icon-running-system.svg", alt="")
         span  Ходовая система
