--- a/src/blocks/components/mobile-menu/_mobile-menu.scss
+++ b/src/blocks/components/mobile-menu/_mobile-menu.scss
@@ -74,6 +74,10 @@
       box-sizing: border-box;
       padding-top: 0;
       padding-bottom: 0;
+
+      @include sm-block {
+        max-width: 100%;
+      }
     }
   }
 }
