--- a/src/blocks/modules/marks-and-models/_marks-and-models.scss
+++ b/src/blocks/modules/marks-and-models/_marks-and-models.scss
@@ -1,8 +1,16 @@
 .alphabet {
   display: flex;
 
+  @include md-block {
+    flex-direction: column;
+    background-color: #DCDCDC;
+  }
+
   &-list {
     display: flex;
+    @include md-block {
+      flex-direction: column;
+    }
 
     & a {
       width: 32px;
@@ -16,6 +24,14 @@
       color: $dark-gray;
       text-decoration: none;
 
+      @include lg-block {
+        font-size: 15px;
+      }
+
+      @include md-block {
+        height: 27px;
+      }
+
       &.active {
         color: $white;
         background-color: $dark-gray;
@@ -24,8 +40,9 @@
   }
 
   &-edit {
-    margin-left: 7px;
-    min-width: 64px;
+    margin-left: 20px;
+    letter-spacing: 5px;
+    white-space: nowrap;
     height: 32px;
     font-size: 18px;
     line-height: 25px;
@@ -35,12 +52,41 @@
     text-transform: uppercase;
     color: $dark-gray;
     text-decoration: none;
+
+    @include lg-block {
+      font-size: 15px;
+    }
+
+    @include md-block {
+      flex-direction: column;
+      margin: 0;
+      letter-spacing: normal;
+      height: 27px;
+    }
   }
 }
 
 .marks-and-models {
   margin-top: 35px;
   font-size: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  @include md-block {
+    margin-top: 0;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  &__section {
+    @include md-block {
+      display: flex;
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+
+  }
 }
 
 .letter {
@@ -57,28 +103,54 @@
   vertical-align: top;
   justify-content: center;
   color: #16162D;
+
+  @include md-block {
+    width: 36px;
+    height: 36px;
+    font-size: 25px;
+    border-radius: 6px;
+    margin-left: 18px;
+    margin-bottom: 20px;
+
+  }
 }
 
 .marks {
-  margin-top: 40px;
-  margin-left: 48px;
-  margin-right: 105px;
+  margin: 40px auto auto 48px;
   width: 162px;
   display: inline-block;
   vertical-align: top;
+
+  @include xl-block {
+    margin: 40px 20px auto 20px;
+  }
+
+  @include md-block {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+
+  }
 
 
   &__list {
     list-style-type: none;
     display: flex;
     flex-direction: column;
-    max-width: 162px;
-    width: 100%;
+
+    @include md-block {
+
+    }
+
   }
 
   &__item {
     margin-bottom: 20px;
     display: inline-block;
+
+    @include md-block {
+      margin-bottom: 0;
+    }
 
 
     & a {
@@ -87,6 +159,14 @@
       font-weight: 500;
       font-size: 15px;
       color: $dark-gray;
+
+      @include md-block {
+        border-bottom: 1px solid #E6E6E6;
+        display: block;
+        padding-left: 18px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+      }
     }
 
     &.active {
@@ -95,6 +175,9 @@
         font-weight: bold;
         border-bottom: 3px solid $yellow;
         padding-bottom: 3px;
+        @include md-block {
+          padding-bottom: 12px;
+        }
       }
     }
   }
@@ -109,6 +192,18 @@
   box-sizing: border-box;
   padding: 40px 10px 70px 100px;
   font-size: 15px;
+
+  @include xl-block {
+    max-width: 70%;
+  }
+
+  @include lg-block {
+    max-width: 65%;
+  }
+
+  @include md-block {
+    max-width: 100%;
+  }
 
   &__logo {
     position: absolute;
