--- a/src/blocks/components/mobile-menu/_mobile-menu.scss
+++ b/src/blocks/components/mobile-menu/_mobile-menu.scss
@@ -28,7 +28,7 @@
       padding-top: 15px;
       padding-bottom: 20px;
 
-      &-item {
+      &__item {
         padding: 0;
         margin-bottom: 18px;
 
