Start form comments

--- a/src/blocks/components/button/_button.scss
+++ b/src/blocks/components/button/_button.scss
@@ -54,7 +54,7 @@ button {
     }
 
     &:active {
-        background:$yellow;
+        background: $yellow;
         border: 1px solid rgba(255, 255, 255, 0.18);
         box-shadow: none;
     }
@@ -75,18 +75,17 @@ button {
     color: $base-color-text;
 
     &:hover {
-        background: #D7D7D7;
+        background: #d7d7d7;
         border: 1px solid rgba(255, 255, 255, 0.18);
         box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.4);
     }
 
     &:active {
-        background: #D7D7D7;
+        background: #d7d7d7;
         border: 1px solid rgba(255, 255, 255, 0.18);
         box-shadow: none;
     }
 }
-
 
 .button-add {
     position: relative;
@@ -168,7 +167,7 @@ button {
     display: inline-block;
 
     @include sm-block {
-        background: #F3F3F3;
+        background: #f3f3f3;
         border-radius: 3px 0 2px;
         font-size: 13px;
         padding: 6px 5px 6px 28px;
@@ -231,8 +230,9 @@ button {
 
 .comments {
     display: inline-block;
-    background-color: #919191;
+    background: #ffffff;
     position: relative;
+    padding-top: 40px;
 
     &__inner {
         padding: 40px 90px;
@@ -240,22 +240,110 @@ button {
         margin: 0 auto;
     }
 
-    textarea {
-        max-width: 100%;
-        min-width: 100%;
+    & input[type="text"] {
+        // max-width: 100%;
+        // min-width: 100%;
         width: 100%;
         border: 1px solid #e0e0e0;
         box-sizing: border-box;
-        resize: none;
+        // resize: none;
         padding: 22px;
         font-weight: normal;
         font-size: 18px;
+        background: #ffffff;
         color: #828282;
+        outline: none;
+        // border: none;
+    }
+
+    & button,
+    .button-comments {
+        border: none;
+        border-radius: 4px;
+        font-weight: normal;
+        color: #ffffff;
+        font-size: 16px;
+        padding: 8px 30px;
+        box-sizing: border-box;
     }
 
     &__quantity-text {
         color: #16162d;
         font-weight: 500;
         font-size: 21px;
+        padding-bottom: 35px;
+    }
+
+    &__item {
+        padding: 17px 27px;
+        margin: 0 -25px;
+    }
+
+    &__author {
+        display: flex;
+        align-items: center;
+        margin-bottom: 12px;
+    }
+
+    & img {
+        max-width: 36px;
+        max-height: 36px;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__info {
+        margin-left: 15px;
+    }
+
+    &__name {
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 25px;
+        color: #000000;
+    }
+
+    &__date {
+        font-weight: normal;
+        font-size: 13px;
+        line-height: 21px;
+        color: #919191;
+    }
+
+    &__text {
+        font-weight: normal;
+        font-size: 15px;
+        color: #333333;
+    }
+
+    &__reply {
+        margin-top: 10px;
+        margin-left: -5px;
+        color: #919191;
+        font-weight: normal;
+        font-size: 15px;
+        border: 0;
+        background: 0 0;
+        letter-spacing: normal;
+        cursor: pointer;
+    }
+
+    &__answer {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    &-name__answer {
+        font-weight: normal;
+        font-size: 12px;
+        color: #919191;
+    }
+
+    &__answer-img {
+        width: 12px;
+        height: 12px;
+        margin-left: 10px;
+        margin-right: 7px;
     }
 }
