--- a/src/blocks/components/404-center/_404-center.scss
+++ b/src/blocks/components/404-center/_404-center.scss
@@ -20,7 +20,6 @@
         }
 
         &-services {
-            margin-top: 40px;
             &__img {
                 display: flex;
                 justify-content: space-between;
@@ -34,4 +33,12 @@
         font-size: 15px;
         color: #333333;
     }
+}
+
+.service-name {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 25px;
 }
