--- a/src/blocks/components/button/button.pug
+++ b/src/blocks/components/button/button.pug
@@ -23,5 +23,41 @@ section.comments
     .comments__inner
         .comments__quantity-text 4 комментария
         .form.comments__posting-form
-        textarea(name="textarea", placeholder="Оставить комментарий...")
-            input(type="submit" value="Отправить")
+            input(name="q", type="text", placeholder="Оставить комментарий...")
+            button.button-yellow.button-comments(type="submit") Отправить
+        ul.comments__list
+            li.comments__item
+                .comments__author
+                    img(src='img/comments.jpg', alt='')
+                    .comments__info
+                        .comments__name Иван Сидоров
+                        .comments__date 2.04.2019
+                .comments__text 
+                    |Видел такой сервис... ключевые заголовки на странице 
+                    |меняются под поисковый запрос. Не думал, что это тайна 
+                    |вообще
+                    |Видел такой сервис... ключевые заголовки на странице 
+                    |меняются под поисковый запрос. Не думал, что это тайна 
+                    |вообще
+                button.comments__reply(type="button") Ответить
+
+            li.comments__item
+                .comments__author
+                    img(src='img/comments.jpg', alt='')
+                    .comments__info
+                        .comments__name Василий Петров
+                        .comments__date 2.04.2019
+                    .comments__answer
+                        img.comments__answer-img(src="img/sprites/intermediate-svg/comments-arrow.svg", alt="")
+                        .comments-name__answer Иван Сидоров    
+                .comments__text 
+                    |Видел такой сервис... ключевые заголовки на странице 
+                    |меняются под поисковый запрос. Не думал, что это тайна 
+                    |вообще
+                button.comments__reply(type="button") Ответить
+
+
+
+        .comments__answer
+            img.comments__answer-img(src="img/sprites/intermediate-svg/comments-arrow.svg", alt="")
+            .comments-name__answer Иван Сидоров
