--- a/src/blocks/modules/personal-area/_personal-area.scss
+++ b/src/blocks/modules/personal-area/_personal-area.scss
@@ -30,7 +30,7 @@
             border-radius: 0 6px 0 8px;
 
             &:hover {
-                background-color: red;
+                background-color: #F3F3F3;
             }
         }
     }
