--- a/src/blocks/components/404-center/_404-center.scss
+++ b/src/blocks/components/404-center/_404-center.scss
@@ -1,44 +1,75 @@
-.error {
-    margin-top: 50px;
+.not-found {
+    padding-top: 50px;
     text-align: center;
 
     &__inner {
-        display: flex;
-        justify-content: space-between;
+        position: relative;
+        min-height: 400px;
+        @include xl-block {
+            margin-bottom: 40px;
+        }
+
     }
 
-    &-left {
+    &__img {
+        position: absolute;
+        left: 0;
+        top: 0;
         max-width: 304px;
-        margin: auto;
+
+        @include xl-block {
+            position: relative;
+            margin: 0 auto 20px;
+        }
+
+        & img {
+            width: 100%;
+        }
     }
-    &-right {
+
+    &__content {
         max-width: 602px;
         margin: auto;
-
-        &__h1 {
-            padding-bottom: 40px;
-        }
-
-        &-services {
-            &__img {
-                display: flex;
-                justify-content: space-between;
-            }
-        }
+        text-align: center;
     }
 
     &__text {
-        width: 525px;
+        max-width: 525px;
         font-weight: normal;
         font-size: 15px;
-        color: #333333;
-    }
-}
+        color: $base-color-text;
+        line-height: 25px;
+        margin: 0 auto 50px;
 
-.service-name {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 25px;
+        @include md-block {
+            margin-bottom: 30px;
+        }
+
+        & p {
+            margin-bottom: 20px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
+        &-center {
+            text-align: center;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: 25px;
+            color: $base-color-text;
+            margin: 20px auto;
+
+            & a {
+                font-style: normal;
+                font-weight: bold;
+                font-size: 15px;
+                color: $base-color-text;
+                text-decoration: none;
+                border-bottom: 2px solid $yellow;
+            }
+        }
+    }
 }
