--- a/src/pages/404.pug
+++ b/src/pages/404.pug
@@ -3,6 +3,13 @@ block variables
     - var title = "404";
 
 block content
-    .container
+    main.section-gray
         include ../blocks/components/404-center/404-center
-        include ../blocks/components/filter/filter
+        .container
+            .not-found__text-center
+                |Либо использовать поиск материалов по марке и модели автомобиля:
+            include ../blocks/components/filter/filter
+            .not-found__text-center
+                | Весь список автомобилей вы можете найти на странице
+                |
+                a(href='#')='Марки и модели'
