--- a/src/blocks/components/pagination/pagination.pug
+++ b/src/blocks/components/pagination/pagination.pug
@@ -1,6 +1,6 @@
 .pagination
     nav.pagination__wrap
-        //a(href="#").pagination__prev
+        //a(href="#").pagination__prev Назад
         .pagination__list Назад
             a(href="#").pagination__item 1
             a(href="#").pagination__item.active 2
