--- a/src/blocks/components/share/share.pug
+++ b/src/blocks/components/share/share.pug
@@ -1,3 +1,4 @@
-.share
-    | Поделиться
-    .share__dropdown.hide
+.share.js-share
+    .share__text Поделиться с друзьями
+    .share__dropdown.js-share-dropdown
+        .ya-share2(data-services="vkontakte,facebook,twitter,odnoklassniki")
