--- a/src/blocks/modules/marks-and-models/_marks-and-models.scss
+++ b/src/blocks/modules/marks-and-models/_marks-and-models.scss
@@ -86,6 +86,11 @@
       margin-right: -15px;
     }
 
+    @include sm-block {
+      margin-left: -12px;
+      margin-right: -12px;
+    }
+
   }
 }
 
