--- a/src/blocks/modules/modals/modals.pug
+++ b/src/blocks/modules/modals/modals.pug
@@ -1,5 +1,6 @@
 .modal-list
     include auth-register
+    include restore-password
     include ask-question
     include remind-me
     include select-car
