--- a/src/blocks/components/question/_question.scss
+++ b/src/blocks/components/question/_question.scss
@@ -1,24 +1,28 @@
 .question {
 
   &__section {
-    margin-bottom: 100px;
+    margin-bottom: 60px;
+    padding-bottom: 60px;
+    border-bottom: 3px solid #E7E7E7;
 
-    @include lg-block {
+    @include xl-block {
       margin-bottom: 30px;
+      padding-bottom: 30px;
     }
   }
 
   &__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-bottom: 25px;
-    margin-left: 50px;
+    margin-left: 30px;
+    @include xl-block {
+      margin-left: 70px;
+    }
 
     @include sm-block {
       flex-direction: column;
       align-items: flex-end;
       margin-left: 0;
+      margin-bottom: 10px;
     }
   }
 
@@ -35,8 +39,9 @@
   }
 
   &__item {
+    position: relative;
     background: $white;
-    padding: 20px 50px;
+    padding: 25px 50px 60px;
     box-sizing: border-box;
     border-radius: 8px;
     margin-bottom: 20px;
@@ -52,15 +57,36 @@
   }
 
   &__name {
+    position: relative;
+    left: -53px;
+    display: inline-block;
     font-style: normal;
     font-weight: normal;
-    font-size: 28px;
+    font-size: 20px;
     color: $dark-gray;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    padding: 4px 18px;
+    background-color: $yellow;
+
+    @include md-block {
+      left: -33px;
+    }
+
+    @include sm-block {
+      left: -23px;
+    }
+
+    &_answer {
+      background-color: #B2EDCE;
+    }
 
     @include sm-block {
       font-size: 24px;
     }
+  }
+
+  &__list {
+    margin-bottom: 25px;
   }
 
   &__text {
@@ -78,31 +104,40 @@
 
   &__right {
     position: relative;
-    margin-left: 50px;
-    margin-right: 20px;
+    margin-left: 30px;
+    margin-right: 0;
+
+    @include xl-block {
+      margin-left: 70px;
+      margin-right: 36px;
+    }
 
     @include sm-block {
       margin-left: 0;
     }
 
-
     &:before {
       content: '';
       position: absolute;
-      right: -20px;
-      bottom: 0;
+      right: -31px;
+      top: 0;
       width: 0;
       height: 0;
-      border-bottom: 29px solid $white;
-      border-right: 29px solid transparent;
+      border-top: 36px solid #FFFFFF;
+      border-right: 36px solid transparent;
 
     }
   }
 
   &__left {
     position: relative;
-    margin-right: 50px;
-    margin-left: 20px;
+    margin-right: 30px;
+    margin-left: 0;
+
+    @include xl-block {
+      margin-right: 70px;
+      margin-left: 36px;
+    }
 
     @include sm-block {
       margin-right: 0;
@@ -111,12 +146,12 @@
     &:before {
       content: '';
       position: absolute;
-      left: -20px;
+      left: -31px;
       bottom: 0;
       width: 0;
       height: 0;
-      border-bottom: 29px solid $white;
-      border-left: 29px solid transparent;
+      border-bottom: 36px solid $white;
+      border-left: 36px solid transparent;
 
     }
   }
