--- a/src/blocks/components/share/_share.scss
+++ b/src/blocks/components/share/_share.scss
@@ -1,22 +1,50 @@
 .share {
-  display: inline-block;
-  position: relative;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  color: $base-color-text;
-  padding-right: 35px;
+  display: inline-flex;
+  align-items: center;
+  height: 32px;
 
-  &:before {
-    content: '';
-    position: absolute;
-    background: url("../img/sprites/intermediate-svg/icon-share.svg");
-    width: 23px;
-    height: 26px;
-    top: 0;
-    right: 0;
-    left: auto;
-    bottom: 0;
-    margin: auto;
+  &__text {
+    position: relative;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    color: $base-color-text;
+    padding-right: 35px;
+    cursor: pointer;
+    margin-right: 20px;
+
+    @include sm-block {
+      display: none;
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      background: url("../img/sprites/intermediate-svg/icon-share.svg");
+      width: 23px;
+      height: 26px;
+      top: 0;
+      right: 0;
+      left: auto;
+      bottom: 0;
+      margin: auto;
+      -webkit-transition: transform .5s ;
+      -moz-transition: transform .5s;
+      -ms-transition: transform .5s;
+      -o-transition: transform .5s;
+      transition: transform .5s;
+    }
+  }
+
+  &:hover &__text::before {
+    transform: rotate(180deg);
+  }
+
+  &__dropdown {
+    display: none;
+
+    @include sm-block {
+      display: block;
+    }
   }
 }
